--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <script src="index.php" defer></script>
+    <script src="processa.php" defer></script>
     <script src="script.js" defer></script>
     
   </head>
@@ -13,7 +13,7 @@
       <div class="container-title">
         <span class="title"><strong>Loja</strong>Vendas</span>
       </div>
-      <i class="material-icons" style="font-size:45px;color:white">shopping_cart</i>
+      <i class="material-icons" style="font-size:40px;color:black">shopping_cart</i>
       <div class="container-cartTitle">
         <span class="cart__title">Meu carrinho</span>
       </div>
