--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <script src="processa.php" defer></script>
-    <script src="script.js" defer></script>
+    <script src="processa.php"></script>
+   
     
   </head>
   <body>
     <header class="header">
       <div class="container-title">
         <span class="title"><strong>Loja</strong>Vendas</span>
-      </div>
-      <i class="material-icons" style="font-size:40px;color:black">shopping_cart</i>
+      </div>    
       <div class="container-cartTitle">
-        <span class="cart__title">Meu carrinho</span>
+        <span class="cart__title">Minha Venda</span>
       </div>
     </header>
     <section class="container">
-      <section class="items"></section>
-      <section class="cart">
-        <ol class="cart__items"></ol>
-        <button class="empty-cart">Esvaziar carrinho</button>
+      <section class="item"></section>
+      <section class="venda">
+        <ol class="venda__items"></ol>
+        <button class="empty-venda">Finalizar Venda</button>
       </section>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
